--- a/css/style.css
+++ b/css/style.css
@@ -4,102 +4,142 @@ body{
     line-height: 1.5;
     padding:0;
     margin:0;
-    background-color:#f4f4f4;
+    background-color:white;
+    overflow-y:scroll;
 }
 
-/* global */
-.container{
-    width:88%;
-    margin:auto;
-    overflow:hidden;
+/* global main page */
+.main {
+    margin-left: 20%; /* Same as the width of the sidebar */
 }
 
-ul{
-    margin:0;
-    padding:0;
+section {
+    padding: 5% 5%;
+    height: 100vh;
 }
 
-/* header */
-header{
-    background:#011f3c;
-    color:#ffffff;
-    padding-top:30px;
-    min-height:70px;
-    border-bottom:#ffffff 3px solid;
+.container {
+    padding: 5% 5%;
+    text-align: left;
 }
 
-header a{
-    color:#ffffff;
+p {
+    font-size: 20px;
+    margin: 0px;
+}
+
+a {
+    padding-block: 5px;
     text-decoration:none;
-    text-transform:uppercase;
-    font: size 16px;
 }
 
-header li{
-    float:left;
-    display:inline;
-    /* padding order: top right bottom left */
-    padding: 0 20px 0 20px;
+.centered {
+    text-align: center;
 }
 
-header #intro{
-    float:left;
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
 
-header #intro h1{
-    margin:0;
+/* side navigation */
+.sidenav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 20%; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #acd8a4;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding: 20px;
 }
 
-header nav{
-    float:right;
-    margin-top:10px;
+.sidenav header {
+    padding: 20px;
+    font-size: 30px;
+    color: #ffffff;
+}
+  
+.sidenav nav {
+    padding: 6px 8px 6px 16px;
+    font-size: 25px;
 }
 
-header .highlight, header .current a{
-    color:#ffffff;
-    font-weight:bold;
+.sidenav a {
+    display: block;
+    width: 100%;
+    color: #ffffff;
 }
 
-header a:hover{
-    color:#cccccc;
-    font-weight:bold;
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .contact-dropdown {
+    display: none;
+    width: 95%;
+    padding-left: 5%;
+    font-size: 15px;
+    /*add lighter background color to emphasize?*/
+}
+
+.fa {
+    float: right;
+    padding-right: 8px;
 }
 
 /* homepage */
 #homepage{
-    min-height:400px;
-    background:url('../img/homepage.jpg') no-repeat 0 -400px;
-    text-align:center;
-    color:#ffffff;
+    color:#81ce73;
+    background: white;
+}
+
+#homepage .home-block{
+    display:flex;
 }
 
 #homepage h1{
-    margin-top:100px;
-    font-size:55px;
+    font-size:30px;
     margin-bottom:10px;
 }
 
-#homepage p{
-    font-size:20px;
+#homepage .intro{
+    color:#81ce73;
+    margin-top: 13%;
+    margin-left: 50px;
+    width: 60%;
 }
 
-/* footer */
-footer{
-    padding:20px;
-    margin-top:20px;
-    color:#ffffff;
-    background-color:#011f3c;
+.img-profile {
+    margin-left: 5%;
+    border-radius: 50%;
+    max-width: 40%;
+    max-height: 40%;
 }
 
-footer a{
-    color:#ffffff;
-    text-decoration:none;
-    font: size 12px;
+#resume {
+    background: white;
+    border-color: #81ce73;
+    margin: 2%;
+    border-radius: 20%;
+    padding: 0.5% 2%;
 }
 
-footer li{
-    float:left;
-    display:inline;
-    /* padding order: top right bottom left */
-    padding: 0 14.4% 0 0;
+#resume a {
+    font-size: 20px;
+    color:#81ce73;
 }
+
+#resume:hover {
+    background: rgb(248, 248, 248);
+}
+
+/* about */
+#about{
+    background: white;
+    text-align:center;
+    color:black;
+}
+
