--- a/css/style.css
+++ b/css/style.css
@@ -2,19 +2,17 @@ body{
     font-size: 15px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
-    padding:0;
-    margin:0;
     background-color:white;
     overflow-y:scroll;
 }
 
 /* global main page */
 .main {
-    margin-left: 20%; /* Same as the width of the sidebar */
+    margin-left: 25%; /* Same as the width of the sidebar */
+    text-align: center;
 }
 
 section {
-    padding: 5% 5%;
     height: 100vh;
 }
 
@@ -25,7 +23,7 @@ section {
 
 p {
     font-size: 20px;
-    margin: 0px;
+    margin: 1 rem;
 }
 
 a {
@@ -37,6 +35,13 @@ a {
     text-align: center;
 }
 
+#page-break {
+    max-width: 80%;
+    position: relative;
+    margin-top: -10%;
+    z-index: 2;
+}
+
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
@@ -46,25 +51,44 @@ a {
 /* side navigation */
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 20%; /* Set the width of the sidebar */
+    width: 25%; /* Set the width of the sidebar */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     top: 0; /* Stay at the top */
     left: 0;
-    background-color: #acd8a4;
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding: 20px;
+    background-color: #91be89;
+    text-align: center;
 }
 
 .sidenav header {
-    padding: 20px;
+    padding: 10% 5% 0% 5%;
     font-size: 30px;
     color: #ffffff;
 }
+
+#img-profile {
+    border-radius: 50%;
+    max-width: 75%;
+    max-height: 75%;
+    border: 2px solid #f1f1f1;
+}
+
+.overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: block;
+    width: 15%;
+    height: fit-content;
+    top: 33%;
+    left: 5%;
+    background-color: #91be8996; /* background with opacity */
+    border: 2px solid;
+    border-color: white;
+    font-size: 2vw;
+}
   
 .sidenav nav {
-    padding: 6px 8px 6px 16px;
-    font-size: 25px;
+    padding: 0% 10% 5%;
+    font-size: 20px;
 }
 
 .sidenav a {
@@ -75,6 +99,7 @@ a {
 
 .sidenav a:hover {
     color: #f1f1f1;
+    background-color: #acd8a496;
 }
 
 .sidenav .contact-dropdown {
@@ -86,58 +111,48 @@ a {
 }
 
 .fa {
-    float: right;
-    padding-right: 8px;
-}
-
-/* homepage */
-#homepage{
-    color:#81ce73;
-    background: white;
-}
-
-#homepage .home-block{
-    display:flex;
-}
-
-#homepage h1{
-    font-size:30px;
-    margin-bottom:10px;
-}
-
-#homepage .intro{
-    color:#81ce73;
-    margin-top: 13%;
-    margin-left: 50px;
-    width: 60%;
-}
-
-.img-profile {
-    margin-left: 5%;
-    border-radius: 50%;
-    max-width: 40%;
-    max-height: 40%;
+    padding: 5px 0px 5px 10px;
 }
 
 #resume {
-    background: white;
-    border-color: #81ce73;
-    margin: 2%;
-    border-radius: 20%;
-    padding: 0.5% 2%;
+    border: 2px solid;
+    border-color: white;
+    background: #91be89;
+    padding: 0.5% 10%;
 }
 
 #resume a {
-    font-size: 20px;
-    color:#81ce73;
+    color: white;
+    font-size: 15px;
 }
 
 #resume:hover {
-    background: rgb(248, 248, 248);
+    border-color: #f1f1f1;
+    background: #acd8a496;
 }
 
 /* about */
 #about{
+    color:#73ac69;
+    background: white;
+}
+
+#about h1{
+    font-size:30px;
+    margin-bottom:10px;
+}
+
+#about .intro{
+    color:#73ac69;
+    margin-top: 13%;
+    margin-left: 50px;
+}
+
+
+
+/* projects */
+#projects{
+    position: relative;
     background: white;
     text-align:center;
     color:black;
