Improved responsiveness of website
Made previously fixed side-navigation menu retractable on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 
 /* global main page */
 .main {
-    margin-left: 25%; /* Same as the width of the sidebar */
+    margin-left: 300px; /* Same as the width of the sidebar */
     text-align: center;
 }
 
@@ -19,6 +19,12 @@ section {
 .container {
     padding: 5% 5%;
     text-align: left;
+    margin-left: 50px;
+}
+
+h1{
+    font-size:30px;
+    margin-bottom:10px;
 }
 
 p {
@@ -31,64 +37,91 @@ a {
     text-decoration:none;
 }
 
-.centered {
-    text-align: center;
-}
-
-#page-break {
-    max-width: 80%;
+#divider {
+    max-width: 40%;
     position: relative;
     margin-top: -10%;
-    z-index: 2;
+    display: inline-block;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+.fa-bars{
+    position: fixed;
+    top:10px;
+    left:10px;
+    color: #91be89;
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+    height: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #91be89;
+    border-radius: 20px;
+    border: 5px solid white;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #67995e;
+}
+
+/* On smaller screens, make sidebar retractable and make font smaller */
+@media screen and (max-width: 775px) {
+    .main {margin-left: 0px}
+    .fa-bars {z-index: 2;}
+    .sidenav {display: none;}
+    h1 {font-size: 30px;}
+    p {font-size: 20px;}
+}
+
+@media screen and (min-width: 776px) {
+    .main {margin-left: 300px}
+    .fa-bars {z-index: 0;}
+    .sidenav {display: block;}
+    h1 {font-size: 25px;}
+    p {font-size: 18px;}
 }
 
 /* side navigation */
 .sidenav {
-    height: 100%; /* Full-height: remove this if you want "auto" height */
-    width: 25%; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    height: 100%;
+    width: 300px;
+    position: fixed;
     z-index: 1; /* Stay on top */
-    top: 0; /* Stay at the top */
+    top: 0;
     left: 0;
-    background-color: #91be89;
+    background-color:#91be89;
     text-align: center;
 }
 
 .sidenav header {
     padding: 10% 5% 0% 5%;
-    font-size: 30px;
     color: #ffffff;
 }
 
 #img-profile {
     border-radius: 50%;
-    max-width: 75%;
-    max-height: 75%;
+    max-width: 200px;
     border: 2px solid #f1f1f1;
 }
 
 .overlay {
-    position: fixed; /* Sit on top of the page content */
+    position: fixed;
     display: block;
-    width: 15%;
+    width: 200px;
     height: fit-content;
-    top: 33%;
-    left: 5%;
+    top: 180px;
+    left: 50px;
     background-color: #91be8996; /* background with opacity */
     border: 2px solid;
     border-color: white;
-    font-size: 2vw;
+    font-size: 25px;
 }
   
 .sidenav nav {
-    padding: 0% 10% 5%;
-    font-size: 20px;
+    padding: 2% 10% 5%;
+    font-size: 22px;
 }
 
 .sidenav a {
@@ -102,28 +135,27 @@ a {
     background-color: #acd8a496;
 }
 
+[class*="fa-caret"]{
+    padding: 5px 0px 5px 10px;
+}
+
 .sidenav .contact-dropdown {
     display: none;
     width: 95%;
     padding-left: 5%;
     font-size: 15px;
-    /*add lighter background color to emphasize?*/
-}
-
-.fa {
-    padding: 5px 0px 5px 10px;
 }
 
 #resume {
     border: 2px solid;
     border-color: white;
-    background: #91be89;
-    padding: 0.5% 10%;
-}
-
-#resume a {
     color: white;
-    font-size: 15px;
+    position: fixed;
+    padding-block: 0px;
+    width: 150px;
+    bottom: 40px;
+    left: 75px;
+    font-size: 18px;
 }
 
 #resume:hover {
@@ -133,28 +165,38 @@ a {
 
 /* about */
 #about{
-    color:#73ac69;
+    color:#67995e;
     background: white;
 }
 
-#about h1{
-    font-size:30px;
-    margin-bottom:10px;
-}
-
 #about .intro{
-    color:#73ac69;
-    margin-top: 13%;
-    margin-left: 50px;
+    margin-top: 12%;
 }
-
 
 
 /* projects */
 #projects{
     position: relative;
-    background: white;
     text-align:center;
-    color:black;
+    color:#67995e;
+    background: white;
 }
 
+.scrolling-projects {
+    margin-top: 5%;
+    height: 60vh;
+    overflow-x: scroll;
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: repeat(3, 400px);
+}
+
+
+.project-col{
+    padding: 50px;
+    background: #91be89b2;
+}
+
+.project-img{
+    max-width: 80%;
+}
