--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ h1{
     margin-bottom:10px;
 }
 
+h2 {
+    font-size:18px;
+    margin: 10px 0px;
+}
+
 p {
     font-size: 20px;
     margin: 1 rem;
@@ -73,14 +78,16 @@ a {
     .sidenav {display: none;}
     h1 {font-size: 30px;}
     p {font-size: 20px;}
+    .scrolling-projects {grid-template-columns: repeat(3, 100%);}
 }
 
 @media screen and (min-width: 776px) {
     .main {margin-left: 300px}
     .fa-bars {z-index: 0;}
     .sidenav {display: block;}
-    h1 {font-size: 25px;}
-    p {font-size: 18px;}
+    h1 {font-size: 30px;}
+    p {font-size: 20px;}
+    .scrolling-projects {grid-template-columns: repeat(3, 45%);}
 }
 
 /* side navigation */
@@ -100,7 +107,7 @@ a {
     color: #ffffff;
 }
 
-#img-profile {
+#profile-img {
     border-radius: 50%;
     max-width: 200px;
     border: 2px solid #f1f1f1;
@@ -183,20 +190,36 @@ a {
 }
 
 .scrolling-projects {
-    margin-top: 5%;
-    height: 60vh;
+    margin-top: 4vh;
+    height: 70vh;
     overflow-x: scroll;
     display: grid;
-    grid-gap: 50px;
-    grid-template-columns: repeat(3, 400px);
+    grid-gap: 5%;
 }
-
 
 .project-col{
-    padding: 50px;
-    background: #91be89b2;
+    display: grid; 
+    grid-template-columns: 40% 50%;
+    grid-gap: 20px;
+    align-items: center;
+    padding: 40px;
+    background: #91be898a;
+    color: #67995e;
 }
 
-.project-img{
-    max-width: 80%;
+.tools {
+    font-size: 12px;
+    font-style: italic;
+    text-align: left;
+}
+
+.description {
+    font-size: 15px;
+    margin: 7.5px 0px;
+    text-align: justify;
+}
+
+.project-img {
+    max-width: 100%;
+    max-height: 80%;
 }
