--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ h2 {
 }
 
 p {
-    font-size: 3vh;
     margin: 1 rem;
 }
 
@@ -75,6 +74,7 @@ a {
 
 /* square screens*/
 @media (min-aspect-ratio: 4/4) {
+    p {font-size: 3vh;}
     .sidenav {width: 25vw;}
     .sidenav nav {font-size: 1.55vw;}
     .sidenav .contact-dropdown {font-size: 1vw;}  
@@ -89,6 +89,7 @@ a {
 
 /* wide horizontal screens*/
 @media (min-aspect-ratio: 7/4) {
+    p {font-size: 3vh;}
     .sidenav {width: 25vw;}
     .sidenav nav {font-size: 1.55vw;}
     .sidenav .contact-dropdown {font-size: 1vw;}  
@@ -103,6 +104,7 @@ a {
 
 /* vertical screens*/
 @media (max-aspect-ratio: 4/4) {
+    p {font-size: 2.5vh;}
     .sidenav {width: 300px;}
     .sidenav nav {font-size: 3.5vh;}
     .sidenav .contact-dropdown {font-size: 2vh;}  
@@ -112,7 +114,7 @@ a {
     .sidenav {display: none;}
     .scrolling-projects {overflow-y:scroll; grid-template-columns: repeat(3, 100%);}
     .project-col{display: block; padding: 10%;}
-    .project-img {max-height: 60%;}
+    .project-img {max-height: 40vh;}
 }
 
 /* side navigation */
@@ -122,7 +124,7 @@ a {
     z-index: 1; /* Stay on top */
     top: 0;
     left: 0;
-    background-color:#91be89;
+    background-color:#99bb92;
     text-align: center;
 }
 
@@ -162,7 +164,7 @@ a {
 
 .sidenav a:hover {
     color: #f1f1f1;
-    background-color: #acd8a496;
+    background-color: #ffffff2a;
 }
 
 [class*="fa-caret"]{
@@ -186,7 +188,7 @@ a {
 
 #resume:hover {
     border-color: #f1f1f1;
-    background: #acd8a496;
+    background: #ffffff2a;
 }
 
 /* about */
@@ -226,7 +228,7 @@ a {
     text-align: center;
     padding-left: 10%;
     padding-right:10%;
-    height: inherit;
+    min-height: 70vh;
     background: #91be898a;
     color: #67995e;
 }
